--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@
   --title-text: #f8f2f1f3;
   --small-text: #f5f4f4ec;
   --link-color: #f5f4f4;
-  --red-text: #dd3a3a;
+  --red-text: #a01414;
 }
 
 * {
@@ -451,8 +451,9 @@ blockquote {
 }
 
 @media (max-width: 620px) {
-  .nav {
+  nav {
     width: 100vw;
+    height: 60px;
   }
 
   .nav-link-container {
@@ -461,7 +462,9 @@ blockquote {
 
   .nav-link-container a {
     font-size: 0.95rem;
-    margin-right: 20px;
+    margin-right: 0;
+    margin-left: 1rem;
+    justify-content: space-evenly;
   }
 
   .nav-logo {
@@ -490,16 +493,20 @@ blockquote {
     width: 100%;
   }
 
+  .btn {
+    font-size: 1rem;
+  }
+
   .content {
     max-width: 100%;
   }
 
   .content h1 {
-    font-size: 3rem;
+    font-size: 2.8rem;
   }
 
   .content-p {
-    font-size: 1.2rem;
+    font-size: 1rem;
   }
 
   #about {
@@ -509,14 +516,14 @@ blockquote {
   }
 
   .award-logo-container {
-    padding: 1rem;
+    padding: 1.5rem 1rem;
     margin: 0;
     max-width: 100%;
   }
 
   .awards {
     height: 70px;
-    width: 350px;
+    width: 370px;
   }
 
   .details {
@@ -547,11 +554,11 @@ blockquote {
 
   .visit-text-container {
     width: 100%;
-    justify-content: flex-start;
+    justify-content: center;
   }
 
   .visit-text-container h1 {
-    font-size: 2.3rem;
+    font-size: 2rem;
   }
 
   .visit-categories {
@@ -562,5 +569,32 @@ blockquote {
   .calendar {
     height: 300px;
     width: 340px;
+  }
+
+  .location {
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 3rem 0 0;
+    width: 85%;
+    font-size: 1rem;
+  }
+}
+
+@media (max-width: 375px) {
+  .nav-link-container a {
+    font-size: 0.9rem;
+    margin-right: 0;
+    margin-left: 0.6rem;
+    justify-content: space-evenly;
+  }
+  .award-logo-container {
+    padding: 1rem;
+    margin: 0;
+    max-width: 100%;
+  }
+
+  .awards {
+    height: 70px;
+    width: 310px;
   }
 }
