--- a/styles.css
+++ b/styles.css
@@ -97,7 +97,8 @@ nav {
   text-decoration: none;
 }
 
-.nav-link-container a:hover {
+.nav-link-container a:hover,
+.nav-link-container a:active {
   color: var(--red-text);
   border-top: 2px solid var(--red-text);
   cursor: pointer;
@@ -205,7 +206,7 @@ nav {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  padding: 4rem 0 9rem;
+  padding: 4rem 0 8rem;
 }
 
 blockquote {
