--- a/styles.css
+++ b/styles.css
@@ -455,9 +455,168 @@ blockquote {
 @media (max-width: 1024px) {
   nav {
     width: 100vw;
-    height: 60px;
+    height: 80px;
   }
 
+  .nav-link-container {
+    width: auto;
+  }
+
+  .nav-link-container a {
+    font-size: 0.95rem;
+    margin-right: 0;
+    margin-right: 1rem;
+    justify-content: space-evenly;
+  }
+
+  .nav-logo {
+    width: 120px;
+  }
+
+  .nav-logo-container h2 {
+    font-size: 1.5rem;
+    padding: 0 1rem 1rem;
+  }
+
+  .video-section {
+    position: relative;
+    height: 800px;
+  }
+
+  .video-container {
+    z-index: -10;
+  }
+
+  .video-container:after {
+    object-fit: cover;
+  }
+
+  .content-wrapper {
+    padding: 9rem 3rem 5rem;
+    width: 100%;
+  }
+
+  .btn {
+    font-size: 1rem;
+  }
+
+  .content {
+    max-width: 100%;
+  }
+
+  .content h1 {
+    font-size: 2.8rem;
+  }
+
+  .content-p {
+    font-size: 1rem;
+  }
+
+  #about {
+    padding: 1rem;
+    margin: 0;
+    width: 100%;
+  }
+
+  .award-logo-container {
+    padding: 1.5rem 1rem;
+    margin: 0;
+    max-width: 100%;
+  }
+
+  .awards {
+    height: 170px;
+    width: 700px;
+  }
+
+  .details {
+    flex-direction: column;
+    padding: 2rem 0;
+  }
+
+  .details-img img {
+    width: 550px;
+    height: 500px;
+    margin-bottom: 1rem;
+  }
+
+  .details .text {
+    width: 94%;
+  }
+
+  #visit {
+    padding: 1rem;
+    margin: 2rem auto;
+  }
+
+  .visit-flex-container {
+    width: 100%;
+    flex-direction: column;
+    margin: 0;
+  }
+
+  .visit-text-container {
+    width: 100%;
+    justify-content: center;
+  }
+
+  .visit-text-container h1 {
+    font-size: 2rem;
+  }
+
+  .visit-categories {
+    margin-top: 3rem;
+    width: 100%;
+  }
+
+  .calendar {
+    height: 440px;
+    width: 440px;
+  }
+
+  .location {
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 3rem 0 0;
+    width: 85%;
+    font-size: 1rem;
+  }
+
+  .corn-header {
+    padding: 1rem;
+    font-size: 1.5rem;
+    width: 85%;
+    text-align: center;
+  }
+
+  .corn-img img {
+    height: 300px;
+  }
+
+  .corn-body {
+    flex-direction: column;
+    width: 100%;
+    padding: 1rem;
+  }
+
+  .corn-body-text {
+    width: 100%;
+    padding: 1rem;
+  }
+
+  .corn-categories {
+    width: 95%;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+}
+
+@media (max-width: 620px) {
+  nav {
+    width: 100vw;
+    height: 60px;
+  }
   .nav-link-container {
     width: auto;
   }
