--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@
 
 @font-face {
   font-family: Asylum;
-  src: url("assets/BlackAsylumDEMO-KCFonts.ttf");
+  src: url("./assets/BlackAsylumDEMO-KCFonts.ttf");
 }
 
 :root {
