--- a/styles.css
+++ b/styles.css
@@ -31,6 +31,30 @@ body {
 
 a {
   text-decoration: none;
+  -webkit-tap-highlight-color: transparent;
+}
+
+a:focus {
+  outline: none;
+}
+
+a:active {
+  border: none;
+  outline: none;
+}
+
+ul {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+}
+
+li {
+  list-style-type: none;
+}
+
+.fa-bars {
+  display: none;
 }
 
 nav {
@@ -62,7 +86,7 @@ nav {
 
 .nav-logo-container {
   position: relative;
-  animation: logoAnimation 1.2s linear;
+  animation: logoAnimation 1.1s linear 0.1s;
 }
 
 .nav-logo-container a {
@@ -80,17 +104,14 @@ nav {
 }
 
 .nav-link-container {
-  display: flex;
   height: auto;
-  width: 25%;
-  justify-content: space-around;
 }
 
 .nav-link-container a {
   width: 100%;
   z-index: 10;
   display: inline-block;
-  margin-right: 1.5rem;
+  margin-right: 2rem;
   color: var(--link-color);
   font-size: 1.1rem;
   font-weight: 500;
@@ -442,13 +463,13 @@ blockquote {
 
 @keyframes logoAnimation {
   0% {
-    transform: scale(5);
+    transform: scale(16) translateX(20px);
   }
   50% {
-    transform: scale(10);
+    transform: scale(8) translateX(10px);
   }
   100% {
-    transform: scale(1) rotate(0);
+    transform: scale(1) translateX(0);
   }
 }
 
@@ -614,25 +635,60 @@ blockquote {
   nav {
     width: 100vw;
     height: 60px;
-  }
-  .nav-link-container {
-    width: auto;
+    padding-top: 0;
   }
 
-  .nav-link-container a {
-    font-size: 0.95rem;
-    margin-right: 0;
-    margin-left: 1rem;
-    justify-content: space-evenly;
+  .menu {
+    overflow: hidden;
+
+    flex-direction: column;
+    padding: 1.5rem;
+    display: none;
+  }
+
+  .nav-link-container {
+    width: auto;
+    text-align: right;
+    padding: 0.5rem;
+  }
+
+  .menu a {
+    margin: 0 0 0.5rem;
+    text-align: center;
+  }
+
+  .nav-link-container a:hover,
+  .nav-link-container a:active {
+    border: none;
+  }
+
+  .menu-icon {
+    font-size: 0;
+  }
+
+  .fa-bars {
+    display: block;
+    color: var(--small-text);
+    cursor: pointer;
+  }
+
+  .open-menu {
+    display: block;
+  }
+
+  .open {
+    background: rgba(0, 0, 0, 0.2);
   }
 
   .nav-logo {
     width: 120px;
+    top: -0.5rem;
+    left: -0.5rem;
   }
 
   .nav-logo-container h2 {
-    font-size: 1.5rem;
-    padding: 0 1rem 1rem;
+    font-size: 1.4rem;
+    padding: 1rem 0.5rem;
   }
 
   .video-section {
@@ -672,6 +728,7 @@ blockquote {
     padding: 1rem;
     margin: 0;
     width: 100%;
+    justify-content: center;
   }
 
   .award-logo-container {
@@ -681,23 +738,25 @@ blockquote {
   }
 
   .awards {
-    height: 70px;
-    width: 370px;
+    height: 80px;
+    width: 380px;
   }
 
   .details {
     flex-direction: column;
     padding: 1rem 0;
+    align-items: center;
   }
 
   .details-img img {
-    width: 300px;
+    width: 100%;
     height: 300px;
     margin-bottom: 1rem;
+    display: block;
   }
 
   .details .text {
-    width: 94%;
+    width: 90%;
   }
 
   #visit {
@@ -717,12 +776,25 @@ blockquote {
   }
 
   .visit-text-container h1 {
-    font-size: 2rem;
+    font-size: 1.6rem;
+  }
+
+  .visit-text-container h3 {
+    margin-bottom: 0;
   }
 
   .visit-categories {
     margin-top: 3rem;
     width: 100%;
+  }
+
+  .hours p {
+    font-size: 1.3rem;
+  }
+
+  .hours h3,
+  .pricing h3 {
+    font-size: 1.3rem;
   }
 
   .calendar {
@@ -766,24 +838,52 @@ blockquote {
     justify-content: center;
     align-items: center;
   }
+
+  @keyframes logoAnimation {
+    0% {
+      transform: scale(16) translateX(25px) translateY(20px);
+    }
+    50% {
+      transform: scale(8) translateX(15px) translateY(10px);
+    }
+    100% {
+      transform: scale(1) translateX(0) translateY(0);
+    }
+  }
 }
 
 @media (max-width: 375px) {
-  .nav-link-container a {
-    font-size: 0.9rem;
-    margin-right: 0;
-    margin-left: 0.6rem;
-    justify-content: space-evenly;
+  .content-wrapper {
+    padding: 15rem 2rem 1rem;
   }
+
   .award-logo-container {
-    padding: 1rem;
-    margin: 0;
     max-width: 100%;
+    padding: 0.5rem;
+  }
+
+  .award-logo-container p {
+    font-size: 1.3rem;
   }
 
   .awards {
     height: 70px;
-    width: 310px;
+    width: 340px;
+  }
+
+  .details .text {
+    font-size: 1.3rem;
+  }
+
+  #visit {
+    margin: 2rem 0;
+    text-align: unset;
+    width: 100%;
+    padding: 1rem 1.5rem;
+  }
+
+  .visit-text-container h1 {
+    font-size: 1.5rem;
   }
 
   .location {
