--- a/styles.css
+++ b/styles.css
@@ -81,12 +81,13 @@ nav {
   position: absolute;
   top: -1.2rem;
   left: 0;
-  transition: animation ease;
 }
 
 .nav-logo-container {
   position: relative;
-  animation: logoAnimation 1.1s linear 0.1s;
+  will-change: transform;
+  animation: logoAnimation 0.8s linear 0.1s;
+  backface-visibility: hidden;
 }
 
 .nav-logo-container a {
@@ -463,11 +464,19 @@ blockquote {
 
 @keyframes logoAnimation {
   0% {
-    transform: scale(16) translateX(20px);
+    transform: scale(20) translateX(20px);
+  }
+  25% {
+    transform: scale(15) translateX(15px);
   }
   50% {
-    transform: scale(8) translateX(10px);
+    transform: scale(10) translateX(10px);
   }
+
+  75% {
+    transform: scale(5) translateX(5px);
+  }
+
   100% {
     transform: scale(1) translateX(0);
   }
@@ -841,11 +850,19 @@ blockquote {
 
   @keyframes logoAnimation {
     0% {
-      transform: scale(16) translateX(25px) translateY(20px);
+      transform: scale(12) translateX(22px) translateY(15px);
+    }
+    25% {
+      transform: scale(9) translateX(18px) translateY(12px);
     }
     50% {
-      transform: scale(8) translateX(15px) translateY(10px);
+      transform: scale(6) translateX(14px) translateY(8px);
     }
+
+    75% {
+      transform: scale(3) translateX(8px) translateY(4px);
+    }
+
     100% {
       transform: scale(1) translateX(0) translateY(0);
     }
