--- a/styles.css
+++ b/styles.css
@@ -214,7 +214,7 @@ nav {
 }
 
 #about {
-  padding: 3.5rem;
+  padding: 3.5rem 3.5rem 3rem;
   text-align: left;
   display: grid;
   grid-template-columns: 1fr;
