--- a/styles.css
+++ b/styles.css
@@ -423,7 +423,7 @@ nav {
   position: absolute;
   top: 50%;
   left: 50%;
-  z-index: 100;
+  z-index: 1;
   transform: translate(-50%, -50%);
 }
 
@@ -652,7 +652,7 @@ nav {
 
   .menu {
     overflow: hidden;
-
+    z-index: 1000;
     flex-direction: column;
     padding: 1.5rem;
     display: none;
@@ -661,12 +661,13 @@ nav {
   .nav-link-container {
     width: auto;
     text-align: right;
-    padding: 0.5rem;
+    padding: 0.5rem 1rem 0 0;
   }
 
   .menu a {
     margin: 0 0 0.5rem;
     text-align: center;
+    font-size: 1.2rem;
   }
 
   .nav-link-container a:hover,
@@ -695,7 +696,7 @@ nav {
   }
 
   .open {
-    background: rgba(0, 0, 0, 0.2);
+    background: rgba(0, 0, 0, 0.4);
   }
 
   .nav-logo {
