--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@
   --title-text: #f8f2f1f3;
   --small-text: #f5f4f4ec;
   --link-color: #f5f4f4;
-  --red-text: #8f2d2a;
+  --red-text: #972f2b;
 }
 
 * {
